[package]
name = "rust_programs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethabi = "18.0.0"
hex = "0.4.3"
keccak = "0.1.5"
lazy_static = "1.4.0"
rand = "0.8.5"
tiny-keccak = "2.0.2"
tokio = { version = "1.45", features = ["rt-multi-thread", "macros", "time"] }

[features]
rust_enum = []
lcm = []
reference = []
zombie = []
refernce = []
swap_loop = []
threads = []
generics = []
option = []
memory-allocation = []
async_programming= []
linked-list = []
